# mcp-templates

./: .gitignore  README.md
python-mcp/: .gitignore  README.md  main.py  pyproject.toml  seed.py  seed_documents.py
python-mcp/chroma_db/: chroma.sqlite3
python-mcp/multi-tool-agent/: agent.py  tools.py
python-mcp/src/: __init__.py  server.py
python-mcp/src/agent/: __init__.py  agent.py  tools.py
ts-mcp/: .env.example  README.md  agent.ts  index.ts  package.json  server.ts  test-mcp.ts  tools.ts
